--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,31 @@
-alabaster==0.7.12
-appdirs==1.4.4
-Babel==2.9.1
-certifi==2021.10.8
-charset-normalizer==2.0.12
-docutils==0.17.1
-esbonio==0.9.0
-idna==3.3
-imagesize==1.3.0
-importlib-metadata==4.11.3
-Jinja2==3.0.3
-MarkupSafe==2.1.1
-packaging==21.3
-pydantic==1.8.2
-pygls==0.11.3
-Pygments==2.11.2
-pyparsing==3.0.7
-pyspellchecker==0.6.3
-pytz==2021.3
-requests==2.27.1
-six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
-snowballstemmer==2.2.0
-Sphinx==4.4.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-typeguard==2.13.3
-typing-extensions==4.1.1
-urllib3==1.26.8
-zipp==3.7.0
+beautifulsoup4==4.11.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+EditorConfig==0.12.3
+ghp-import==2.1.0
+idna==3.4
+importlib-metadata==6.0.0
+Jinja2==3.1.2
+jsbeautifier==1.14.7
+Markdown==3.3.7
+MarkupSafe==2.1.2
+mergedeep==1.3.4
+mkdocs==1.4.2
+mkdocs-material==9.0.13
+mkdocs-material-extensions==1.1.1
+mkdocs-mermaid2-plugin==0.6.0
+packaging==23.0
+Pygments==2.14.0
+pymdown-extensions==9.9.2
+python-dateutil==2.8.2
+PyYAML==6.0
+pyyaml-env-tag==0.1
+regex==2022.10.31
+requests==2.28.2
+six==1.16.0
+soupsieve==2.4
+urllib3==1.26.14
+watchdog==2.2.1
+zipp==3.14.0
