--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,15 +6,11 @@
 # Required
 version: 2
 
-# Set the version of Python and other tools you might need
-# build:
-#   os: ubuntu-22.04
-#   tools:
-#     python: "3.10"
-
+Set the version of Python and other tools you might need
 build:
-    tools:
-      python: "3.8"
+  os: ubuntu-22.04
+  tools:
+    python: "3.8.9"
 
 mkdocs:
   configuration: mkdocs.yml
@@ -22,4 +18,4 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements: docs/requirements.txt
+    - requirements: docs/requirements.txt
