--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,9 +8,9 @@ version: 2
 
 Set the version of Python and other tools you might need
 build:
-  os: ubuntu-22.04
+  # os: ubuntu-22.04
   tools:
-    python: "3.8.9"
+    python: "3.8"
 
 mkdocs:
   configuration: mkdocs.yml
