--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,10 +7,10 @@
 version: 2
 
 #Set the version of Python and other tools you might need
-build:
+# build:
   # os: ubuntu-22.04
-  tools:
-    python: "3.8"
+  # tools:
+  #   python: "3.8"
 
 mkdocs:
   configuration: mkdocs.yml
