--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,8 @@ plugins:
             MORE: PLUS
             FAQ: POUF
             Audit: Inspection
+            TEST: CACA
+    - page-to-pdf
 nav:
   - Home: index.md
   - How to:
@@ -52,5 +54,4 @@ nav:
     - About Iaso: about_iaso.md
     - Full README: iaso_readme_full.md
     - Source code: https://github.com/BLSQ/iaso
-  - FAQ: 
-      - That one question: FAQ.md
+  - TEST: ./FAQ/
